<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="190dp"
                android:scaleType="centerCrop"
                android:src="@drawable/background" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginTop="-20dp"
                android:layout_gravity="center_horizontal|center_vertical"
                android:scaleType="centerCrop"
                android:src="@drawable/photo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="80dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/nama"
                android:textColor="#f6f6f6"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="120dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/nim"
                android:textColor="#f6f6f6"
                android:textSize="18sp" />
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="35dp"
        android:paddingTop="30dp"
        android:paddingRight="35dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonSimulasinilai"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="top|center_horizontal"
                android:scaleType="centerCrop"
                android:background="@drawable/graph"
                android:onClick="buttonSimulasinilai"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="bottom|center_horizontal"
                android:padding="5dp"
                android:text="@string/menu1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonCuaca"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="top|center_horizontal"
                android:scaleType="centerCrop"
                android:background="@drawable/rainyday"
                android:onClick="buttonCuaca"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="bottom|center_horizontal"
                android:padding="5dp"
                android:text="@string/menu2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonNilai"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="top|center_horizontal"
                android:scaleType="centerCrop"
                android:background="@drawable/piechart"
                android:onClick="buttonNilai"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="bottom|center_horizontal"
                android:padding="5dp"
                android:text="@string/menu3" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonProfil"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="top|center_horizontal"
                android:scaleType="centerCrop"
                android:background="@drawable/user"
                android:onClick="buttonProfil"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="bottom|center_horizontal"
                android:padding="5dp"
                android:text="@string/menu4" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="35dp"
        android:paddingTop="30dp"
        android:paddingRight="35dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonIkon1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="top|center_horizontal"
                android:scaleType="centerCrop"
                android:background="@drawable/tools"
                android:onClick="buttonIkon1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="bottom|center_horizontal"
                android:padding="5dp"
                android:text="@string/menu5" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonIkon2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="top|center_horizontal"
                android:scaleType="centerCrop"
                android:background="@drawable/blueprint"
                android:onClick="buttonIkon2"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="bottom|center_horizontal"
                android:padding="5dp"
                android:text="@string/menu6" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonSaran"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="top|center_horizontal"
                android:scaleType="centerCrop"
                android:background="@drawable/envelope"
                android:onClick="buttonSaran"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="bottom|center_horizontal"
                android:padding="5dp"
                android:text="@string/menu7" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonTentang"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="top|center_horizontal"
                android:scaleType="centerCrop"
                android:background="@drawable/megaphone"
                android:onClick="buttonTentang"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="bottom|center_horizontal"
                android:padding="5dp"
                android:text="@string/menu8" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>